# spinup

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  bi_weekly_audit.yml  release.yml  rust.yml
data/: sample.json  sample.toml  sample.yml  setup.sh
examples/: sample.json  sample.toml  sample.yml
libspinup/: Cargo.toml
libspinup/src/: lib.rs  runconfig.rs
libspinup/src/configuration/: command.rs  commandset.rs  files.rs  mod.rs  packages.rs  system.rs
libspinup/src/operations/: custom_commands.rs  file_downloads.rs  mod.rs  packages.rs
libspinup/src/operations/runcore/: mod.rs  standard.rs  testing.rs
spinup/: Cargo.toml
spinup/src/: main.rs
spinup/src/utils/generate/: main.rs
src/: config.rs  error.rs  lib.rs  main.rs  process.rs  system.rs
src/configuration/: command.rs  files.rs  mod.rs  packages.rs  snap.rs
src/operations/: file_downloads.rs  mod.rs  packages.rs  snap.rs
