[package]
name = 'spinup'
version = '0.1.0'
authors = ['Steve Pentland <stevepentland@gmail.com>']
edition = '2018'
license = 'MIT'

[dependencies]
clap = '2.33'
dirs = '2.0'
flexi_logger = '0.14'
libc = '0.2'
log = '0.4'
serde_yaml = '0.8'
serde_json = '1.0'
sys-info = '0.5.7'
toml = '0.5'
reqwest = '0.10.0-alpha.2'
tokio = '0.2.0-alpha.6'
futures = '0.3'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dev-dependencies]
paste = '0.1'
