[package]
name = 'spinup'
version = '0.1.0'
authors = ['Steve Pentland <stevepentland@gmail.com>']
edition = '2018'
license = 'MIT'

[dependencies]
clap = '2.33'
dirs = '2.0'
flexi_logger = '0.14'
libc = '0.2'
log = '0.4'
serde_yaml = '0.8'
serde_json = '1.0'
sys-info = '0.5.7'
toml = '0.5'
futures = '0.3'

[dependencies.reqwest]
git = 'https://github.com/seanmonstar/reqwest'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.tokio]
version = '0.2'
features = ['macros']

[dev-dependencies]
paste = '0.1'
