[package]
name = 'libspinup'
version = '0.2.0'
authors = ['Steve Pentland <stevepentland@gmail.com>']
edition = '2018'
license = 'MIT'

[dependencies]
cfg-if = "0.1.10"
dirs = "2.0.2"
flexi_logger = "0.15.8"
futures = "0.3.1"
lazy_static = "1.4.0"
libc = "0.2.66"
log = "0.4.8"
reqwest = "0.10.1"
serde_yaml = "0.8.11"
serde_json = "1.0.46"
sys-info = "0.5.9"
toml = "0.5.6"

[dependencies.serde]
version = "1.0.104"
features = ['derive']

[dependencies.tokio]
version = "0.2.11"
features = ['macros']

[dev-dependencies]
paste = "0.1.6"
