[package]
name = 'spinup'
version = '0.2.0'
authors = ['Steve Pentland <stevepentland@gmail.com>']
edition = '2018'
license = 'MIT'
default-run = 'spinup'

[dependencies]
clap = '2.33'
log = '0.4'

[dependencies.libspinup]
path = '../libspinup'

[dependencies.tokio]
version = '1.9'
features = ['macros']

[[bin]]
name = 'generate'
path = 'src/utils/generate/main.rs'